images bag fixed

--- a/DOM/AboutUs.html
+++ b/DOM/AboutUs.html
@@ -44,6 +44,7 @@
         </div>
         <div class="col-md-6">
           <img src="about-image.jpg" alt="About Us Image" class="img-fluid">
+          <img src="..\img\space.jpg" alt="">
         </div>
       </div>
     </div>
@@ -56,6 +57,6 @@
   </footer>
 
   <!-- Bootstrap JS -->
- 
+
 </body>
 </html>
