--- a/DOM/index.html
+++ b/DOM/index.html
@@ -41,5 +41,6 @@
             <a class="btn" href="reviews.html">See recent <br>reviews</a>
         </div>
     </div>
-
-    
+</div>
+</body>
+</html>
