--- a/DOM/AboutUs.html
+++ b/DOM/AboutUs.html
@@ -138,7 +138,7 @@
   <div class="row ">
    <div class="profile col-lg-4 col-sm-12">
   <div class="profile-picture">
-    <!-- Add your profile picture image here -->
+  <img src="../img/Нурали.jpg" class="prof">
   </div>
   <div class="profile-text">
     <h4>Nurali Ishangali</h4>
@@ -149,7 +149,7 @@
 
  <div class="profile col-lg-4 col-sm-12">
   <div class="profile-picture">
-    <img src="">
+    <img src="../img/Исламбек.jpg" class="prof">
   </div>
   <div class="profile-text">
     <h4>Islambek Salakhadden</h4>
@@ -160,7 +160,7 @@
 
  <div class="profile col-lg-4 col-sm-12">
   <div class="profile-picture">
-    <!-- Add your profile picture image here -->
+    <img src="../img/Бекзат.jpg" class="prof">
   </div>
   <div class="profile-text">
     <h4>Bekzat Kabyshke</h4>
