--- a/DOM/AboutUs.html
+++ b/DOM/AboutUs.html
@@ -135,7 +135,7 @@
   </div>
 
 <div class="container-fluid" style="background-color: white;" >
-  <div class="row ">
+  <div class="row " style="height: 400px;">
    <div class="profile col-lg-4 col-sm-12">
   <div class="profile-picture">
   <img src="../img/Нурали.jpg" class="prof">
