Filter Items System

--- a/DOM/Reviewpage.html
+++ b/DOM/Reviewpage.html
@@ -50,162 +50,194 @@
 <div class="container-fluid" id="main">
 	<div class="row ">
 		<div class="btn btn-secondary col-lg-1 col-sm-1 " id="firstbtn">All</div>
-		<div class="btn btn-secondary col-lg-1 col-sm-1">Hot</div>
-		<div class="btn btn-secondary col-lg-1 col-sm-1">High score</div>
+		<div class="btn btn-secondary col-lg-1 col-sm-1" id="filter-hot">Hot</div>
+		<div class="btn btn-secondary col-lg-1 col-sm-1" id="filter-high">High score</div>
 		<div class="btn btn-secondary col-lg-1 col-sm-1" id="lastbtn">Low score</div>
 
 
 	</div>
 
 <!---Row for the reviews-->
-	<div class="row" id="reviewrow">
+	<div class="row " id="reviewrow" data-category="high">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
 <img src="../img/zelda.png" id="reviewimg">
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row" id="reviewtext">
+		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
 			<p>The Legend of Zelda: Tears of the Kingdom Review</p>
+			
+			<p>10 <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
 		</div>
-	</div>
 
 
 <div class="row d-flex justify-content-center" >
-	<div class="line" style="width: 620px;"></div>
+	<div class="line" style="width: 620px; margin-top: 30px;"></div>
 </div>
-
-
-<div class="row" id="reviewrow">
-		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
-<img src="../img/zelda.png" id="reviewimg">
-		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row" id="reviewtext">
-			<p>The Legend of Zelda: Tears of the Kingdom Review</p>
-		</div>
 	</div>
 
-	<div class="row d-flex justify-content-center" >
-	<div class="line" style="width: 620px;"></div>
-</div>
 
 
-	<div class="row" id="reviewrow">
+
+
+<div class="row " id="reviewrow" data-category="low">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
 <img src="../img/zelda.png" id="reviewimg">
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row" id="reviewtext">
+		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
 			<p>The Legend of Zelda: Tears of the Kingdom Review</p>
+			<p>2 <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
 		</div>
+		<div class="row d-flex justify-content-center" >
+	<div class="line" style="width: 620px; margin-top: 30px;"></div>
+</div>
 	</div>
 
-	<div class="row d-flex justify-content-center" >
-	<div class="line" style="width: 620px;"></div>
-</div>
 
 
-	<div class="row" id="reviewrow">
+	<div class="row " id="reviewrow" data-category="high">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
 <img src="../img/zelda.png" id="reviewimg">
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row" id="reviewtext">
+		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
 			<p>The Legend of Zelda: Tears of the Kingdom Review</p>
+			<p>7 <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
 		</div>
+
+		<div class="row d-flex justify-content-center" >
+	<div class="line" style="width: 620px; margin-top: 30px;"></div>
+</div>
 	</div>
 
-	<div class="row d-flex justify-content-center" >
-	<div class="line" style="width: 620px;"></div>
-</div>
 
 
-	<div class="row" id="reviewrow">
+	<div class="row " id="reviewrow" data-category="low">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
 <img src="../img/zelda.png" id="reviewimg">
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row" id="reviewtext">
+		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
 			<p>The Legend of Zelda: Tears of the Kingdom Review</p>
+			<p>4 <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
 		</div>
+
+		<div class="row d-flex justify-content-center" >
+	<div class="line" style="width: 620px; margin-top: 30px;"></div>
+</div>
 	</div>
 
-	<div class="row d-flex justify-content-center" >
-	<div class="line" style="width: 620px;"></div>
-</div>
 
 
-	<div class="row" id="reviewrow">
+	<div class="row " id="reviewrow" data-category="hot">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
 <img src="../img/zelda.png" id="reviewimg">
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row" id="reviewtext">
+		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
 			<p>The Legend of Zelda: Tears of the Kingdom Review</p>
+			<p>5 <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
 		</div>
+
+		<div class="row d-flex justify-content-center" >
+	<div class="line" style="width: 620px; margin-top: 30px;"></div>
+</div>
 	</div>
 
-	<div class="row d-flex justify-content-center" >
-	<div class="line" style="width: 620px;"></div>
-</div>
 
 
-	<div class="row" id="reviewrow">
+
+	<div class="row " id="reviewrow" data-category="low">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
 <img src="../img/zelda.png" id="reviewimg">
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row" id="reviewtext">
+		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
 			<p>The Legend of Zelda: Tears of the Kingdom Review</p>
+			<p>2 <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
 		</div>
+
+		<div class="row d-flex justify-content-center" >
+	<div class="line" style="width: 620px; margin-top: 30px;"></div>
+</div>
 	</div>
 
-	<div class="row d-flex justify-content-center" >
-	<div class="line" style="width: 620px;"></div>
-</div>
 
 
-	<div class="row" id="reviewrow">
+
+	<div class="row " id="reviewrow" data-category="high">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
 <img src="../img/zelda.png" id="reviewimg">
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row" id="reviewtext">
+		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
 			<p>The Legend of Zelda: Tears of the Kingdom Review</p>
+			<p>9 <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
 		</div>
+
+		<div class="row d-flex justify-content-center" >
+	<div class="line" style="width: 620px; margin-top: 30px;"></div>
+</div>
 	</div>
 
-	<div class="row d-flex justify-content-center" >
-	<div class="line" style="width: 620px;"></div>
-</div>
 
 
-	<div class="row" id="reviewrow">
+
+	<div class="row " id="reviewrow" data-category="high">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
 <img src="../img/zelda.png" id="reviewimg">
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row" id="reviewtext">
+		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
 			<p>The Legend of Zelda: Tears of the Kingdom Review</p>
+			<p>8  <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
 		</div>
+
+		<div class="row d-flex justify-content-center" >
+	<div class="line" style="width: 620px; margin-top: 30px;"></div>
+</div>
 	</div>
 
-	<div class="row d-flex justify-content-center" >
-	<div class="line" style="width: 620px;"></div>
-</div>
 
 
-	<div class="row" id="reviewrow">
+
+	<div class="row " id="reviewrow" data-category="hot">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
 <img src="../img/zelda.png" id="reviewimg">
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row" id="reviewtext">
+		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
 			<p>The Legend of Zelda: Tears of the Kingdom Review</p>
+			<p>6  <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
 		</div>
+
+		<div class="row d-flex justify-content-center" >
+	<div class="line" style="width: 620px; margin-top: 30px;"></div>
+</div>
 	</div>
 
-	<div class="row d-flex justify-content-center" >
-	<div class="line" style="width: 620px;"></div>
-</div>
 
 
-	<div class="row" id="reviewrow">
+
+	<div class="row " id="reviewrow" data-category="high">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
 <img src="../img/zelda.png" id="reviewimg">
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row" id="reviewtext">
+		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
 			<p>The Legend of Zelda: Tears of the Kingdom Review</p>
+			<p>7  <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
 		</div>
+
+		<div class="row d-flex justify-content-center" >
+	<div class="line" style="width: 620px; margin-top: 30px;"></div>
+</div>
+	</div>
+
+
+
+	<div class="row  " id="reviewrow" data-category="low">
+		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
+<img src="../img/zelda.png" id="reviewimg">
+		</div>
+		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
+			<p>The Legend of Zelda: Tears of the Kingdom Review</p>
+			<p>5 <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
+		</div>
+
+		<div class="row d-flex justify-content-center" >
+	<div class="line" style="width: 620px; margin-top: 30px;"></div>
+</div>
 	</div>
 
 
