link to the review totk

--- a/DOM/Reviewpage.html
+++ b/DOM/Reviewpage.html
@@ -63,7 +63,8 @@
 <img src="../img/zelda.png" id="reviewimg">
 		</div>
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
-			<p>The Legend of Zelda: Tears of the Kingdom Review</p>
+			<p><a href="zelda_totk.html" class="link-light link-offset-2 
+				link-underline-opacity-0 link-underline-opacity-100-hover">The Legend of Zelda: Tears of the Kingdom Review</a></p>
 			
 			<p>10 <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
 		</div>
