--- a/DOM/Reviewpage.html
+++ b/DOM/Reviewpage.html
@@ -162,7 +162,7 @@
 
 	<div class="row " id="reviewrow" data-category="high">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
-<img src="../img/zelda.png" id="reviewimg">
+<img src="../img/wildhunt.jpg" id="reviewimg">
 		</div>
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
 			<p>The Legend of Zelda: Tears of the Kingdom Review</p>
