zelda review kinda done

--- a/DOM/Reviewpage.html
+++ b/DOM/Reviewpage.html
@@ -42,6 +42,7 @@
       <div class="row col-lg-12 col-md-6 col-sm-3 ">
         <h1 style="color: white; font-size: 80px;">Reviews</h1>
         
+        
     </div>
 </div>
 
@@ -58,13 +59,14 @@
 	</div>
 
 <!---Row for the reviews-->
-	<div class="row " id="reviewrow" data-category="high">
+	<div class="row " id="reviewrow" data-category="hot">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
 <img src="../img/zelda.png" id="reviewimg">
 		</div>
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
 			<p><a href="zelda_totk.html" class="link-light link-offset-2 
 				link-underline-opacity-0 link-underline-opacity-100-hover">The Legend of Zelda: Tears of the Kingdom Review</a></p>
+				<p><i class="fa-solid fa-staff-snake fa-md" style="color: #ffffff;"></i> Nurali, 14.05.23</p>
 			
 			<p>10 <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
 		</div>
@@ -81,10 +83,10 @@
 
 <div class="row " id="reviewrow" data-category="low">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
-<img src="../img/zelda.png" id="reviewimg">
+<img src="../img/panda.jpg" id="reviewimg">
 		</div>
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
-			<p>The Legend of Zelda: Tears of the Kingdom Review</p>
+			<p>Kung-fu Panda 2 The Game Review</p>
 			<p>2 <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
 		</div>
 		<div class="row d-flex justify-content-center" >
@@ -96,10 +98,10 @@
 
 	<div class="row " id="reviewrow" data-category="high">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
-<img src="../img/zelda.png" id="reviewimg">
+<img src="../img/uncharted.jpg" id="reviewimg">
 		</div>
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
-			<p>The Legend of Zelda: Tears of the Kingdom Review</p>
+			<p>Uncharted 4:A Thief's End Review</p>
 			<p>7 <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
 		</div>
 
@@ -112,10 +114,10 @@
 
 	<div class="row " id="reviewrow" data-category="low">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
-<img src="../img/zelda.png" id="reviewimg">
+<img src="../img/fallout.jpg" id="reviewimg">
 		</div>
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
-			<p>The Legend of Zelda: Tears of the Kingdom Review</p>
+			<p>Fallout 4 Review</p>
 			<p>4 <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
 		</div>
 
@@ -128,10 +130,10 @@
 
 	<div class="row " id="reviewrow" data-category="hot">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
-<img src="../img/zelda.png" id="reviewimg">
+<img src="../img/diablo 4.jpg" id="reviewimg">
 		</div>
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
-			<p>The Legend of Zelda: Tears of the Kingdom Review</p>
+			<p>Diablo 4 Review</p>
 			<p>5 <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
 		</div>
 
@@ -179,10 +181,10 @@
 
 	<div class="row " id="reviewrow" data-category="high">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
-<img src="../img/zelda.png" id="reviewimg">
+<img src="../img/outerwilds.jpg" id="reviewimg">
 		</div>
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
-			<p>The Legend of Zelda: Tears of the Kingdom Review</p>
+			<p>The Outer Wilds Review</p>
 			<p>8  <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
 		</div>
 
@@ -196,10 +198,10 @@
 
 	<div class="row " id="reviewrow" data-category="hot">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
-<img src="../img/zelda.png" id="reviewimg">
+<img src="../img/cyberpunk.jpg" id="reviewimg">
 		</div>
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
-			<p>The Legend of Zelda: Tears of the Kingdom Review</p>
+			<p>Cyberpunk Review</p>
 			<p>6  <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
 		</div>
 
@@ -213,11 +215,11 @@
 
 	<div class="row " id="reviewrow" data-category="high">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
-<img src="../img/zelda.png" id="reviewimg">
+<img src="../img/bloodborne.jpg" id="reviewimg">
 		</div>
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
-			<p>The Legend of Zelda: Tears of the Kingdom Review</p>
-			<p>7  <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
+			<p>Bloodborne Review</p>
+			<p>9  <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
 		</div>
 
 		<div class="row d-flex justify-content-center" >
