--- a/DOM/zelda_totk.html
+++ b/DOM/zelda_totk.html
@@ -24,33 +24,44 @@
   </div>
 
   <main class="container-fluid">
-    <section>
-      <h2>Summary</h2>
-      <p>Review summary goes here.</p>
-    </section>
+    <div class="container">
+       <p>
+Ask yourself this: what do you want from a sequel to The Legend of Zelda: Breath of the Wild? More enemy variety? Better dungeons? Totally unexpected new ideas? Or is simply more Hyrule to explore enough for you? Thankfully, you don’t have to pick just one, because Nintendo’s response to all of those answers is a casual but confident, “Sure thing.” The Legend of Zelda: Tears of the Kingdom doesn’t necessarily revolutionize what already made Breath of the Wild one of the greatest games of all time, but it’s not a sequel that’s simply more of the same, either. This sandbox is bigger, richer, and somehow even more ambitious, with creative new systems like vehicle building, ridiculous weapon crafting, and a revamped Hyrule map with a dizzying amount of depth further fleshing out the intoxicating exploration that made the original so captivating. Breath of the Wild felt far from unfinished but, inconceivably, Tears of the Kingdom has somehow made it feel like a first draft.</p>
+    </div>
+         
+    
 
-    <section>
-      <h2>Pros</h2>
-      <ul>
-        <li>Pro 1</li>
-        <li>Pro 2</li>
-        <li>Pro 3</li>
-      </ul>
-    </section>
+    <div class="container">
+      <h2  style="font-size: 50px;">The story stands out from your typical Zelda plots</h2>
+      <div class="row d-flex justify-content-center" >
+  <div class="line" style="width: 1300px; margin-top: 10px; margin-bottom: 10px;"></div>
+</div>
+      <p>The bulk of the cutscenes and big story moments are also once again collected at specific spots around the map, shedding light on the history of Hyrule and the source of the “Upheaval” – a bombastic event at the start of Tears that opens up menacing chasms, causes the ruins of an ancient civilization called the Zonai to appear floating in the sky, and peppers the surface with new structures and strange anomalies. This still might not be the best storytelling structure over the course of such a large game, as it leaves you without much direct interaction with its central characters for most of your time playing, but that’s very easy to forgive when the story itself is so dang cool.</p>
+    </div>
 
-    <section>
-      <h2>Cons</h2>
-      <ul>
-        <li>Con 1</li>
-        <li>Con 2</li>
-        <li>Con 3</li>
-      </ul>
-    </section>
+    <div class="container">
+      <h2 style="font-size: 50px;">This may be the same map, but it in no way feels repetitive.</h2>
+      <div class="row d-flex justify-content-center" >
+  <div class="line" style="width: 1300px; margin-top: 10px; margin-bottom: 10px;"></div>
+</div>
+      <p>While this is the same fundamental map of Hyrule, it in no way feels repetitive to explore – even as someone who’s scoured BotW for secrets. The story doesn’t give you a hard number, but it’s been a few years since the defeat of Calamity Ganon, and the people are rebuilding. The main town is a brand-new outpost that has sprung up in Hyrule Field just outside of the castle, giving you a hub that evolves in entertaining ways as you progress. It’s a ton of fun to recognize characters or locations and see how they’ve grown or changed, but even beyond those explicit differences, Tears simply sends you along unexpected paths and to unfamiliar locations. That made me constantly see parts of Hyrule I knew and loved from a different perspective, breathing plenty of life into a map that clearly still had more than enough to give.</p>
+    </div>
 
-    <section>
-      <h2>Final Verdict</h2>
-      <p>Review final verdict goes here.</p>
-    </section>
+    <div class="container">
+      <h2 style="font-size: 50px;">It's clear Nintendo was listening to feedback after BotW</h2>
+      <div class="row d-flex justify-content-center" >
+  <div class="line" style="width: 1300px; margin-top: 10px; margin-bottom: 10px;"></div>
+</div>
+      <p>Your other two new abilities take a less prominent role, but they support the additions made elsewhere nicely. You can reverse time on objects with Recall, which is largely used either to ride rocks that have fallen from sky islands back up where they came from or to send an enemy attacks back at them in neat ways, while Ascend lets you warp through the ceiling up to whatever is above you. Given all of the caves in Tears, the ability to quickly get above ground again or climb certain mountains faster is essential, and it can even be used to find all manner of sneaky secrets. It took my brain some time to remember I even had this power, but once I started “thinking with portals” it became one of my favorite tools. Neither of these abilities are quite as exciting as Ultra Hand or Fuse, necessarily, but it’s notable that I never once mourned the loss of Stasis or Cryonis, which are completely gone since Link no longer has the Sheikah Slate from BotW.</p>
+    </div>
+
+    <div class="container">
+      <h2 style="font-size: 50px;">Verdict</h2>
+      <div class="row d-flex justify-content-center" >
+  <div class="line" style="width: 1300px; margin-top: 10px; margin-bottom: 10px;"></div>
+</div>
+      <p>The Legend of Zelda: Tears of the Kingdom is an unfathomable follow-up to one of the greatest games ever made, somehow improving upon it in nearly every way – be that with simple quality-of-life improvements, a genuinely exciting story, or wildly creative new building mechanics that make you rethink what is possible. It both revamps old ground and introduces vast new areas so immense it somehow makes me wonder if Breath of the Wild was actually all that big, with an almost alarming number of tasks to complete, mysteries to discover, and delightful distractions to keep you from ever reaching that place you naively thought you were headed. Nintendo has followed up a triumph with a triumph, expanding and evolving a world that already felt full beyond expectation and raising the bar ever higher into the clouds. </p>
+    </div>
   </main>
 
 
