--- a/DOM/index.html
+++ b/DOM/index.html
@@ -42,5 +42,11 @@
         </div>
     </div>
 </div>
+  
+  <div class="info">
+    <h2 class="info__title">We are the best!</h2><br>
+    <h3 class="info__suptitle">We are the best in the gaming sphere because of our relentless innovation, immersive experiences, unwavering quality,<br> inclusivity, and undeniable passion for gaming. Join us in shaping the future of gaming.</h3>
+
+</div>
 </body>
 </html>
