--- a/DOM/Reviewpage.html
+++ b/DOM/Reviewpage.html
@@ -249,19 +249,43 @@
 
 
 
- <footer class="footer">
-    <div class="container-fluid text-center">
-      <div class="row">
-        <div class="col-lg-4 col-lg-12 col-md-6">
-          <h5>Contact Us</h5>
-          <p>123 Main Street, City, Country</p>
-          <p>Email: info@example.com</p>
-          <p>Phone: 123-456-7890</p>
-        </div>
-        
-      </div>
-    </div>
-  </footer>
+ <div class="foot">
+	<footer class="footer">
+		<div class="waves">
+			
+		  <div class="wave" id="wave1"></div>
+		  <div class="wave" id="wave2"></div>
+		  <div class="wave" id="wave3"></div>
+		  <div class="wave" id="wave4"></div>
+		</div>
+		<ul class="social-icon">
+		  <li class="social-icon__item"><a class="social-icon__link" href="#">
+			  <ion-icon name="logo-facebook"></ion-icon>
+			</a></li>
+		  <li class="social-icon__item"><a class="social-icon__link" href="#">
+			  <ion-icon name="logo-twitter"></ion-icon>
+			</a></li>
+		  <li class="social-icon__item"><a class="social-icon__link" href="#">
+			  <ion-icon name="logo-linkedin"></ion-icon>
+			</a></li>
+		  <li class="social-icon__item"><a class="social-icon__link" href="#">
+			  <ion-icon name="logo-instagram"></ion-icon>
+			</a></li>
+		</ul>
+		<ul class="menu">
+		  <li class="menu__item"><a class="menu__link" href="index.html">Home</a></li>
+		  <li class="menu__item"><a class="menu__link" href="Reviewpage.html">Review</a></li>
+		  <li class="menu__item"><a class="menu__link" href="AboutUs.html">About us</a></li>
+		  
+	
+		</ul>
+		<p>&copy;2023 Astana IT | All Rights Reserved
+			<br>Contact us | salaxadden@bk.ru
+		</p>
+	  </footer>
+	</div>
+	  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+	  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 
 
