--- a/DOM/AboutUs.html
+++ b/DOM/AboutUs.html
@@ -125,10 +125,13 @@
         <i id="close-button" class="fas fa-times"></i>
       </div>
       <div id="chat-body">
-        
+        <div class="message">Welcome to chat!</div>
+        <div id="typing-dots"></div>
       </div>
       <div id="chat-footer">
         <input type="text" id="message-input" placeholder="Type your message...">
+
+
         <button id="send-button">Send</button>
       </div>
     </div>
