--- a/DOM/Reviewpage.html
+++ b/DOM/Reviewpage.html
@@ -37,7 +37,7 @@
 </header>
 
 
-<div class="intro container-fluid text-center" id="spaceid">
+<div class="intro container-fluid responsive text-center" id="spaceid">
     
       <div class="row col-lg-12 col-md-6 col-sm-3 ">
         <h1 style="color: white; font-size: 80px;">Reviews</h1>
