--- a/DOM/index.html
+++ b/DOM/index.html
@@ -142,6 +142,11 @@
     </div>
 
 <br>
+
+<div class="container-fluid">
+    
+
+</div>
 <div class="foot">
 <footer class="footer">
     <div class="waves">
