--- a/DOM/AboutUs.html
+++ b/DOM/AboutUs.html
@@ -23,10 +23,9 @@
 
   <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
+  <a href="index.html">Main</a>
+  <a href="Reviewpage.html">Reviews</a>
+  <a href="AboutUs.html">About Us</a>
 </div>
 <header class="header">
     <div class="container">
