--- a/DOM/zelda_totk.html
+++ b/DOM/zelda_totk.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" type="text/css" href="reviewsdesign.css">
   <title>TotK</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+  <link rel="icon" type="image/png" href="../img/logo.png" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
