Added Cyberpunk review page

--- a/DOM/Reviewpage.html
+++ b/DOM/Reviewpage.html
@@ -128,7 +128,7 @@
 
 
 
-	<div class="row " id="reviewrow" data-category="hot">
+	<div class="row " id="reviewrow" data-category="low">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
 <img src="../img/diablo 4.jpg" id="reviewimg">
 		</div>
@@ -162,7 +162,7 @@
 
 
 
-	<div class="row " id="reviewrow" data-category="high">
+	<div class="row " id="reviewrow" data-category="hot">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
 <img src="../img/wildhunt.jpg" id="reviewimg">
 		</div>
@@ -200,16 +200,18 @@
 
 	<div class="row " id="reviewrow" data-category="hot">
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-row-reverse">
-<img src="../img/cyberpunk.jpg" id="reviewimg">
+	<img src="../img/cyberpunk.jpg" id="reviewimg">
 		</div>
 		<div class="col-lg-6 col-md-6 col-sm-6 d-flex flex-column" id="reviewtext">
-			<p>Cyberpunk Review</p>
-			<p>6  <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
+			<p><a href="cyberpunk.html" class="link-light link-offset-2
+				link-underline-opacity-0 link-underline-opacity-100-hover">Cyberpunk 2077</a></p>
+			<p><i class="fa-solid fa-staff-snake fa-md" style="color: #ffffff;"></i> Bekzat, 23.01.23</p>
+			<p>6 <i class="fa-solid fa-star " style="color: #ff5c5c;"></i></p>
 		</div>
 
 		<div class="row d-flex justify-content-center" >
 	<div class="line" style="width: 620px; margin-top: 30px;"></div>
-</div>
+	</div>
 	</div>
 
 
