--- a/DOM/Witcher3.html
+++ b/DOM/Witcher3.html
@@ -41,7 +41,7 @@ Unlike its predecessor, The Witcher 3: Wild Hunt doesn't exactly come screaming 
     </div>
 
     <div class="container">
-      <h2 style="font-size: 50px;">Optimization.</h2>
+      <h2 style="font-size: 50px;">Optimization</h2>
       <div class="row d-flex justify-content-center" >
   <div class="line" style="width: 1300px; margin-top: 10px; margin-bottom: 10px;"></div>
 </div>
