--- a/DOM/zelda_totk.html
+++ b/DOM/zelda_totk.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="reviewsdesign.css">
-  <title>TotK</title>
+  <title>The Legend of Zelda</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
   <link rel="icon" type="image/png" href="../img/logo.png" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
