--- a/DOM/Reviewpage.html
+++ b/DOM/Reviewpage.html
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="header__inner">
           <i class="fa-solid fa-bars fa-3x" style="color: #ffffff;"  onclick="openNav()"></i>
-            <div class="header__logo">blabla</div>
+            <div class="header__logo">AituGamesReview</div>
 
             <nav class="nav">
                 <a class="nav__link" href="https://t.me/jayganaisa"><i class="fab  fa-telegram" style="color: #ffffff;"></i></a>
