--- a/DOM/index.html
+++ b/DOM/index.html
@@ -46,7 +46,7 @@
   <div class="btn btn-primary" id="main-button"><i class="fa-solid fa-arrows-to-dot fa-2x" style="color: #ffffff;"></i></div>
   <div class="button-options">
     <div class="btn" id="play-button"><i class="fa-solid fa-play" style="color: #ffffff;"></i></div>
-    <audio id="audio-player" src="path/to/music.mp3"></audio>
+    <audio id="audio-player" src="../img/eagle.mp3"></audio>
     <div class="btn" id="stop-button"><i class="fa-solid fa-pause" style="color: #ffffff;"></i></div>
     <div class="btn" id="repeat-button"><i class="fa-solid fa-repeat" style="color: #ffffff;"></i></div>
   </div>
