added terms of use in footer

--- a/DOM/Cyberpunk.html
+++ b/DOM/Cyberpunk.html
@@ -94,7 +94,7 @@ You’re thrust into the shoes of V, a mercenary in Night City who (avoiding spo
           <li class="menu__item"><a class="menu__link" href="index.html">Home</a></li>
           <li class="menu__item"><a class="menu__link" href="Reviewpage.html">Review</a></li>
           <li class="menu__item"><a class="menu__link" href="AboutUs.html">About us</a></li>
-          
+          <li class="menu__item"><a class="menu__link" href="../img/Web (1).pdf">Terms of use</a></li>
     
         </ul>
         <p>&copy;2023 Astana IT | All Rights Reserved
