--- a/DOM/index.html
+++ b/DOM/index.html
@@ -336,6 +336,7 @@ Codename Jade is being made in partnership with Tencent's Level Infinite publish
       <li class="menu__item"><a class="menu__link" href="index.html">Home</a></li>
       <li class="menu__item"><a class="menu__link" href="Reviewpage.html">Review</a></li>
       <li class="menu__item"><a class="menu__link" href="AboutUs.html">About us</a></li>
+      <li class="menu__item"><a class="menu__link" href="../img/Web (1).pdf">Terms of use</a></li>
 
 
     </ul>
