--- a/DOM/Reviewpage.html
+++ b/DOM/Reviewpage.html
@@ -280,7 +280,7 @@
 		  <li class="menu__item"><a class="menu__link" href="index.html">Home</a></li>
 		  <li class="menu__item"><a class="menu__link" href="Reviewpage.html">Review</a></li>
 		  <li class="menu__item"><a class="menu__link" href="AboutUs.html">About us</a></li>
-
+		  <li class="menu__item"><a class="menu__link" href="../img/Web (1).pdf">Terms of use</a></li>
 
 		</ul>
 		<p>&copy;2023 Astana IT | All Rights Reserved
