--- a/DOM/zelda_totk.html
+++ b/DOM/zelda_totk.html
@@ -93,7 +93,7 @@ Ask yourself this: what do you want from a sequel to The Legend of Zelda: Breath
           <li class="menu__item"><a class="menu__link" href="index.html">Home</a></li>
           <li class="menu__item"><a class="menu__link" href="Reviewpage.html">Review</a></li>
           <li class="menu__item"><a class="menu__link" href="AboutUs.html">About us</a></li>
-          
+          <li class="menu__item"><a class="menu__link" href="../img/Web (1).pdf">Terms of use</a></li>
     
         </ul>
         <p>&copy;2023 Astana IT | All Rights Reserved
