--- a/DOM/AboutUs.html
+++ b/DOM/AboutUs.html
@@ -32,7 +32,8 @@
     <div class="container">
         <div class="header__inner">
           <i class="fa-solid fa-bars fa-3x" style="color: #ffffff;"  onclick="openNav()"></i>
-            <div class="header__logo">AituGamesReview</div>
+          <div class="header__logo"><img class="logo" src="../img/logo bl.png" alt=""></div>
+
 
             <nav class="nav">
                 <a class="nav__link" href="https://t.me/jayganaisa"><i class="fab  fa-telegram" style="color: #ffffff;"></i></a>
