--- a/DOM/index.html
+++ b/DOM/index.html
@@ -68,18 +68,24 @@
   <div class="container-fluid text-center " id="best">
     <div class="row" style="padding-top: 60px;">
         <div class="col-lg-4">
-            <h2 class="info__title ">We are the best!</h2><br>
-    <h3 class="info__suptitle">We are the best in the gaming sphere because of our relentless innovation, immersive experiences, unwavering quality,<br> inclusivity, and undeniable passion for gaming. Join us in shaping the future of gaming.</h3>
+            <h2 class="info__title ">Who are we?</h2><br>
+    <h3 class="info__suptitle">Are you a passionate gamer seeking a comprehensive platform that caters to all your gaming needs?
+       Look no further! <br> AituCompany is here to be your ultimate gaming destination, offering an array of features and benefits that will
+        enhance your gaming experience. Dive into the world of gaming with these exciting highlights</h3>
 
         </div>
         <div class="col-lg-4 ">
-            <h2 class="info__title">We are the best!</h2><br>
-    <h3 class="info__suptitle">We are the best in the gaming sphere because of our relentless innovation, immersive experiences, unwavering quality,<br> inclusivity, and undeniable passion for gaming. Join us in shaping the future of gaming.</h3>
+            <h2 class="info__title">Our Ranking System</h2><br>
+    <h3 class="info__suptitle">Ratings and Rankings: Discover the top-rated games in different genres with our reliable ratings and rankings system. <br>
+      Our comprehensive methodology considers user reviews, critical reception, and overall popularity, 
+      enabling you to easily find the highest quality titles that align with your preferences.</h3>
 
         </div>
         <div class="col-lg-4">
-            <h2 class="info__title">We are the best!</h2><br>
-    <h3 class="info__suptitle">We are the best in the gaming sphere because of our relentless innovation, immersive experiences, unwavering quality,<br> inclusivity, and undeniable passion for gaming. Join us in shaping the future of gaming.</h3>
+            <h2 class="info__title">Latest News</h2><br>
+    <h3 class="info__suptitle">Latest Gaming News: Stay up to date with the dynamic gaming industry through our timely news section. <br> 
+      From breaking announcements and releases to updates on your favorite franchises, we deliver the latest information <br>
+       to keep you in the loop.</h3>
 
         </div>
 
