--- a/DOM/Reviewpage.html
+++ b/DOM/Reviewpage.html
@@ -24,13 +24,13 @@
     <div class="container">
         <div class="header__inner">
           <i class="fa-solid fa-bars fa-3x" style="color: #ffffff;"  onclick="openNav()"></i>
-		  <div class="header__logo"><img class="logo" src="../img/logo bl.png" alt=""></div>
+		  <div class="header__logo sc"><img class="logo" src="../img/logo bl.png" alt=""></div>
 
 
             <nav class="nav">
-                <a class="nav__link" href="https://t.me/jayganaisa"><i class="fab  fa-telegram" style="color: #ffffff;"></i></a>
-                <a class="nav__link" href="https://wa.me/77025533392"><i class="fab fa-whatsapp"  style="color: #ffffff;"></i></a>
-                <a class="nav__link" href="https://www.instagram.com/jaygana.isa/"><i class="fab fa-instagram" style="color: #ffffff;"></i></a>
+                <a class="nav__link sc" href="https://t.me/jayganaisa"><i class="fab  fa-telegram" style="color: #ffffff;"></i></a>
+                <a class="nav__link sc" href="https://wa.me/77025533392"><i class="fab fa-whatsapp"  style="color: #ffffff;"></i></a>
+                <a class="nav__link sc" href="https://www.instagram.com/jaygana.isa/"><i class="fab fa-instagram" style="color: #ffffff;"></i></a>
 
             </nav>
         </div>
@@ -42,12 +42,35 @@
 
       <div class="row col-lg-12 col-md-6 col-sm-3 ">
         <h1 style="color: white; font-size: 80px;">Reviews</h1>
-
+ <div class="text-block w-25">
+    <h4>Out Now!</h4>
+    <p>See the review below!</p>
+  </div>
 
     </div>
 </div>
 
+ <div id="chat-container">
+    <div id="chat-button">
+      <i class="fas fa-comment"></i>
+    </div>
+    <div id="chat-window">
+      <div id="chat-header">
+        <span>Chat</span>
+        <i id="close-button" class="fas fa-times"></i>
+      </div>
+      <div id="chat-body">
+        <div class="message">Welcome to chat!</div>
+        <div id="typing-dots"></div>
+      </div>
+      <div id="chat-footer">
+        <input type="text" id="message-input" placeholder="Type your message...">
 
+
+        <button id="send-button">Send</button>
+      </div>
+    </div>
+  </div>
 
 <div class="container-fluid" id="main">
 	<div class="row ">
