Form page with table

--- a/DOM/AboutUs.html
+++ b/DOM/AboutUs.html
@@ -146,7 +146,7 @@
   </div>
 
   <div class="row col-lg-12 col-md-12 col-sm-12 justify-content-center">
-   <a href="FORMHTML.html" class="btn btn-primary" id="formbtn">Link for Collaboration</a>
+   <a href="FORMHTML.html" class="btn btn-primary" id="formbtn" style="background-color: #EA6559; border: none;">Link for Collaboration</a>
   </div>
 </div>
 
