about us pictures resized

--- a/DOM/AboutUs.html
+++ b/DOM/AboutUs.html
@@ -118,7 +118,7 @@
   </div>
   <div class="profile-text">
     <h4>Nurali Ishangali</h4>
-    <p>Front-end Developer</p>
+    <p>Creator of this wonderful code that allows<br> you to navigate through this site <br> without any issue and enjoy it a lot.</p>
   </div>
 </div>
 
@@ -129,7 +129,7 @@
   </div>
   <div class="profile-text">
     <h4>Islambek Salakhadden</h4>
-    <p>Front-end Developer</p>
+    <p>The person who build a foundation<br> for the product that you see before your eyes. <br>Just a beautiful job with DOM.</p>
   </div>
 </div>
 
@@ -140,7 +140,7 @@
   </div>
   <div class="profile-text">
     <h4>Bekzat Kabyshke</h4>
-    <p>Front-end Developer</p>
+    <p>A head that filled reviews with his expert opinion<br> and more that that actuall designer <br> of the web application of AituCompany.</p>
   </div>
 </div>
   </div>
