--- a/DOM/AboutUs.html
+++ b/DOM/AboutUs.html
@@ -49,7 +49,7 @@
 <div class="intro container-fluid text-center" id="spaceid">
 
       <div class="row col-lg-12 col-md-6 col-sm-3 ">
-        <h1 style="color: white; font-size: 80px;">About Us</h1>
+        <h1 style="color: white; font-size: 80px; font-family: 'Andale Mono', monospace;">About Us</h1>
 
     </div>
 </div>
