--- a/DOM/Reviewpage.html
+++ b/DOM/Reviewpage.html
@@ -41,7 +41,7 @@
 <div class="intro container-fluid responsive text-center" id="spaceid">
 
       <div class="row col-lg-12 col-md-6 col-sm-3 ">
-        <h1 style="color: white; font-size: 80px;">Reviews</h1>
+        <h1 style="color: white; font-size: 80px; font-family: 'Andale Mono', monospace;">Reviews</h1>
  <div class="text-block w-25">
     <h4>Out Now!</h4>
     <p>See the review below!</p>
