--- a/DOM/index.html
+++ b/DOM/index.html
@@ -79,12 +79,12 @@
       </div>
     </div>
   </div>
-  
+
 
 <div class="intro" id="audioclickable">
     <div class="container" >
         <div class="intro__inner col-lg-12">
-            <h1 class="intro__suptitle">Welcome <p style="color: #EA6559;">Adventurer</p> </h1>
+            <h1 class="intro__suptitle" style="font-family: 'Andale Mono', monospace;">Welcome <p style="color: #EA6559; font-family:'Andale Mono', monospace;">Adventurer</p> </h1>
 
 
             <a class="btn" id="gotomiddle">See recent <br>reviews</a>
